# finance-suite

./: .gitignore  DEPLOY.md  README.md
.github/workflows/: finance-api-ci.yml  finance-bot-ci.yml
deploy/systemd/: finance-api.service  finance-bot.service
finance-api/: README.md  pyproject.toml  requirements.txt
finance-api/finance_api/: __init__.py  app.py
finance-api/sql/: 001_create_transactions_inbox.sql
finance-api/tests/: test_app.py
finance-bot/: bot.py  input_parser.py  requirements.txt
finance-bot/config/: category_synonyms.json
finance-bot/scripts/: manual_test.py
finance-bot/tests/: test_bot_callbacks.py  test_bot_rendering.py  test_input_parser.py
finance-manager-app/: ARCHITECTURE.md  BACKLOG.md  README.md  SPEC.md  TELEGRAM_BOT_SPEC.md  UI_COPY_VI.md  WORKFLOW.md  run-demo.sh
finance-manager-app/.github/workflows/: flutter-ci.yml  flutter-release.yml
finance-manager-app/finance_manager_app/: .gitignore  README.md  l10n.yaml  pubspec.yaml
finance-manager-app/finance_manager_app/android/: key.properties.example
finance-manager-app/finance_manager_app/android/app/: build.gradle.kts
finance-manager-app/finance_manager_app/lib/: main.dart
finance-manager-app/finance_manager_app/lib/core/db/: app_database.dart  app_database.g.dart  tables.dart
finance-manager-app/finance_manager_app/lib/core/l10n/: app_localizations.dart  app_localizations_vi.dart  app_vi.arb
finance-manager-app/finance_manager_app/test/: finance_sync_service_test.dart  regression_wallet_transfer_test.dart  vnd_format_test.dart  widget_test.dart
(+24 files in other folders)
